terraform-k8s/users/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
  #namespace: iac-learning
  labels:
    app: user-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
      - name: k8s-iac-user
        image: localhost:32000/user-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
