terraform-k8s/users/user-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: iac-learning
spec:
  type: NodePort
  selector:
    app: user-app
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
