terraform-k8s/users/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  #namespace: iac-learning

spec:
  type: LoadBalancer
  selector:
    app: user-app
  ports:
  - port: 8000
    targetPort: 8000
