terraform-k8s/users/user-app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  namespace: iac-learning
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: user.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: user-service
            port: 
              number: 8000
