terraform-k8s/users/user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  #namespace: iac-learning
  labels:
    name: user-ingress

spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/user"
        backend:
          service:
            name: user-service
            port: 
              number: 8000
